[package]
name = "leptos-mdx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos.git", branch = "islands", features = [ "ssr", "islands" ] }
frontmatter = "0.4.0"
femark = "0.1.5"
tl = "0.7.8"
regex = "1.10.4"