[package]
name = "leptos-mdx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frontmatter = "0.4.0"
femark = "0.1.5"
tl = "0.7.8"
regex = "1.10.4"
leptos = { version = "0.6.12", default-features = false, features = [
    "ssr",
    "experimental-islands",
] }
